@@ -3,6 +3,7 @@
 == HEAD
 * PayU Latam: support partial captures [bpollack] #2974
 * FirstPay: Expose error code [curiousepic] #2979
+* Barclaycard Smartpay: Pass device_fingerprint when specified [dtykocki] #2981
 
 == Version 1.83.0 (August 30, 2018)
 * CT Payment: Update How Address is Passed [nfarve] #2960
